

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id("org.beryx.jlink") version "3.0.1"
}

ext {
    javacppPlatform = 'macosx-arm64'
}
group = 'klik'
version = '1.0.0'

repositories {
    mavenCentral()
}

compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    //options.compilerArgs += ['--enable-preview']
    options.compilerArgs += ['-Xlint:-options']
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
      // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
    // files etc
    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
    // PDF icons
    //implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.1'

    // for reading xml definition of haar cascade face detector (viola-jones algorithm)
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
  //  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'
   // implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.0'
   // implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.17.0'
//    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.17.0'
//    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.17.0'

    //implementation group: 'org.bytedeco', name: 'opencv', version: '4.9.0-1.5.10'
    //implementation "org.bytedeco:javacv-platform:1.5.10"
    //implementation 'org.bytedeco:opencv:4.9.0-1.5.10:macosx-arm64'
    //implementation 'org.bytedeco:openblas:0.3.9-1.5.3:macosx-arm64'
    //implementation("org.bytedeco:javacv:1.5.10")
    //implementation("org.bytedeco:javacv-platform:1.5.10")
    //implementation("org.bytedeco:opencv:4.9.0-1.5.10")
    //implementation group: 'org.bytedeco', name: 'flandmark-platform', version: '1.07-1.5.8'
    //implementation group: 'org.bytedeco', name: 'openblas-platform', version: '0.3.6-1.5.1'


    // https://mvnrepository.com/artifact/org.jdom/jdom

    //implementation group: 'org.jdom', name: 'jdom2', version: '2.0.6.1'
    //implementation group: 'org.jdom', name: 'jdom', version: '1.1'

    //implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
    implementation 'com.google.code.gson:gson:2.8.6'

}



def main_class_name = 'klik.Klik_application'

application {
    mainModule = 'klikmodule'
    mainClass = main_class_name

    // Java VM RAM size options:

    // if you have only 2GB or not much more:
    //applicationDefaultJvmArgs = ["-Xms1G"]

    //applicationDefaultJvmArgs = ["-Xms10G","-Xmx10G","-XX:+UseZGC","-XX:+ZGenerational"]

    // if you have a lot of RAM say 64GB or more
    applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC","-XX:+ZGenerational"]
//                                 "-Djava.library.path=/opt/homebrew/lib"]

    // for face recognition, one needs to point the java bindings to opencv
    // on mac you can do that with homebrew
    // brew reinstall opencv --build-from-source

}

javafx {
    version = "23-ea+3"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}


jar {
    manifest {
        attributes(
                'Main-Class': main_class_name
        )
    }
}

/*
graalvmNative {
    binaries {
        main {
            imageName = "klik"
            mainClass = main_class_name
            buildArgs.add("-O4")
        }
        test {
            buildArgs.add("-O0")
        }
    }
    binaries.all {
        buildArgs.add("--verbose")
    }
}
*/

